--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,8 +2,5 @@
 /.github/CODEOWNERS @calcof
 /README.md @calcof
 
-# Owners for introduction docs
-/docs/introduction/ @calcof @heoelri
-
-# Owners of design methodology docs
-/docs/design-guidelines/  @calcof @hjscherer @sebader @msimecek @heoelri @nielsams
+# Owners of docs
+/docs/  @calcof @hjscherer @sebader @msimecek @heoelri @nielsams
